# file-scanner

./: .gitignore  Cargo.toml  index.d.ts  index.js  main.ts  package-lock.json  package.json  tsconfig.json
src/: database.rs  error.rs  lib.rs  playlist_scanner.rs  scanner.rs  song_scanner.rs  structs.rs  utils.rs
