[package]
edition = "2021"
name = "moosync-file-scanner"
version = "0.0.0"
authors = ["Sahil Gupte <ovenoboyo@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
blake3 = {version = "1.3.3", features = ["std"]}
fast_image_resize = "2.7.3"
image = "0.24.6"
lazy_static = "1.4.0"
lofty = "0.12.1"
regex = "1.8.1"
threadpool = "1.8.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
strip = true
lto = true
panic = "abort"

